tests/snapshots/demo_showcase_snapshots__cap_no_truecolor_120x40.snap
---
source: tests/demo_showcase_snapshots.rs
assertion_line: 136
expression: snapshot
---
{
  "config": {
    "cap_preset": "NoTruecolor"
  },
  "effective_caps": {
    "focus": true,
    "hyperlinks": true,
    "mouse": true,
    "sync_output": true,
    "truecolor": false
  },
  "headless_size": {
    "height": 40,
    "width": 120
  },
  "layout_mode": "Full",
  "warnings": [
    "truecolor (preset)"
  ]
}
