tests/snapshots/demo_showcase_snapshots__headless_5_frames.snap
---
source: tests/demo_showcase_snapshots.rs
assertion_line: 70
expression: snapshot
---
{
  "config": {
    "cap_preset": "Auto",
    "fps_cap": 60,
    "seed": 0
  },
  "first_frame_dirty": 1920,
  "frames_rendered": 5,
  "headless_size": {
    "height": 24,
    "width": 80
  },
  "last_frame_dirty": 41,
  "layout_mode": "Full",
  "sentinels": {
    "section": "Overview",
    "top_bar": "OpenTUIShowcaseOverview[Normal] Sidebar"
  }
}
