tests/snapshots/demo_showcase_snapshots__tour_determinism.snap
---
source: tests/demo_showcase_snapshots.rs
expression: snapshot
---
{
  "config": {
    "seed": 42
  },
  "final_step_idx": 12,
  "step_transition_frames": [
    240,
    480,
    691,
    932,
    1173,
    1384,
    1565,
    1806,
    2077,
    2318,
    2559,
    2800
  ],
  "total_steps": 13,
  "tour_completed": true
}
